[package]
name = "localic-std"
version = "0.0.1"
edition = "2021"
authors = ["Strangelove Developers"]

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"]}
tokio = { version = "1.32.0", features = ["full"] }
serde_json = {version = "1.0.107"}
cosmwasm-std = "1.4.0"
thiserror = { version = "1.0.31" }