[package]
name = "localic-std"
version = "0.0.1"
edition = "2021"
authors = ["Strangelove Developers"]

[lib]
name = "localic_std"
path = "./src/lib.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
cosmwasm-std.workspace = true
thiserror.workspace = true
typenum.workspace = true
