[package]
name = "localic-bin"
version = "0.0.1"
edition = "2021"
authors = ["Strangelove Developers"]

[[bin]]
name = "localic-bin"
path = "src/main.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
cosmwasm-std.workspace = true
thiserror.workspace = true

localic-std.workspace = true