[package]
name = "contract1"
version = "0.1.0"
edition = "2021"
authors = ["Strangelove developers"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }